--- a/scratch_pad.html
+++ b/scratch_pad.html
@@ -3,3 +3,6 @@
 <p>Hey, it's Colt!!</p>
 
 <iframe src="http://giphy.com/embed/WLexdRFVddGGA?html5=true" width="500" height="265" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+
+
+<p>Hi.  It's Diana.  </p>
