--- a/scratch_pad.html
+++ b/scratch_pad.html
@@ -1,5 +1,6 @@
 <h1>WDI Scratch Pad</h1>
 
 <p>Hey, it's Colt!!</p>
+<p>No, it's John!</p>
 
 <iframe src="http://giphy.com/embed/WLexdRFVddGGA?html5=true" width="500" height="265" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
